@@ -1,6 +1,7 @@
 xine-ui (0.99.7) unstable; urgency=low
   (add entries here, newest at the top)
 
+  * Make building of fbxine optional (--with-fb; enabled by default).
   * "ToggleFullscreen" command takes an optional numeric parameter,
     controlling whether full-screen mode is switched on or off.
   * New command "Close".
